@@ -19,6 +19,7 @@ version 1.4.2
 8089							: unescape urls in merge dialog
 8091							: odt diff script
 8094							: dialogs2 settings help
+8103							: issue 324
 
 version 1.4.1
 7516							: bugtraq:message with only %BUGID% and bugtraq:number as true
